# HMM-Annotator

./: .gitignore  README.md  pyproject.toml  requirements.txt
hmm_annotator/: __main__.py
src/: chopper.py  chunk_annotator.py  genome_annotator.py  main.py
src/hmm_annotator/: __main__.py  chunk_annotator.py  genome_annotator.py
