[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "HMM-Annotator"
dependencies = ["biopython==1.83", "pyhmmer==0.10.12", "numpy==1.26.4"]
authors = [{name = "Oliver Powell", email = "mail@oliverpowell.com"}]
keywords = ["CLI", "Bioinformatics"]
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = "==3.10.14"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10"
]
dynamic = ["version"]

[tool.setuptools]
packages = ["HMM-annotator"]

[tool.setuptools.entry_points]
hmm-annotator = hmm-annotator.cli:main"