[build-system]
requires = ["setuptools>=75.3.0", "toml"]
build-backend = "setuptools.build_meta"

[project]
name = "HMM-Annotator"
authors = [{name = "Oliver Powell", email = "mail@oliverpowell.com"}]
keywords = ["CLI", "Bioinformatics"]
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10.14"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10"
]
dynamic = ["version", "dependencies"]


[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
version = {attr = "src.hmm_annotator.__version__"}

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
hmm-annotator = "src.hmm_annotator.__main__:main"

